--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build npx json-server -p 3500 data/db.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
