--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-p-2",
   "version": "1.0.0",
+  "homepage": "https://KooWeso.github.io/react_cool_deploy_and_long_one_to_gh_pages",
   "private": true,
   "dependencies": {
     "axios": "^1.7.2",
@@ -12,8 +13,10 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build npx json-server -p 3500 data/db.json",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
